Editing entities, registration started.

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
   <center>
     <form name="form" method="post" action="j_security_check">
       <div>
-        Username:<br>
+        EMail:<br>
         <input type="text" name="j_username">
       </div>
       <div>
