--- a/web/index.html
+++ b/web/index.html
@@ -19,5 +19,7 @@
         <input type="submit" value="Submit">
       </div>
     </form>
+    <br>
+    <a href="register.html">Register</a>
   </center>
 </body>
