--- a/web/register.html
+++ b/web/register.html
@@ -20,6 +20,36 @@
                 Repeat password:<br>
                 <input type="password" name="secondPassword">
             </div>
+            <br>
+            <div>
+                Name:<br>
+                <input type="text" name="name">
+            </div>
+            <div>
+                Surname:<br>
+                <input type="text" name="surname">
+            </div>
+            <div>
+                Middlename:<br>
+                <input type="text" name="middlename">
+            </div>
+            <div>
+                Sex:<br>
+                <input type="text" name="sex">
+            </div>
+            <div>
+                birthDate:<br>
+                <input type="date" name="birthDate">
+            </div>
+            <div>
+                mobileTelephone:<br>
+                <input type="text" name="mobileTelephone">
+            </div>
+            <div>
+                familySize:<br>
+                <input type="number" name="familySize">
+            </div>
+            <br>
             <div>
                 <input type="submit" value="Submit">
             </div>
