Editing entities, registration started.

--- a/web/register.html
+++ b/web/register.html
@@ -49,6 +49,18 @@
                 familySize:<br>
                 <input type="number" name="familySize">
             </div>
+            <div>
+                Выберете льготу:<br>
+                <input type="radio" name="preference" value="0" checked> Нет льготы<br>
+                <input type="radio" name="preference" value="1"> Безработный<br>
+                <input type="radio" name="preference" value="2"> Пенсионер<br>
+                <input type="radio" name="preference" value="3"> Политрепрессированный<br>
+                <input type="radio" name="preference" value="4"> Многодетный<br>
+                <input type="radio" name="preference" value="5"> Ветеран<br>
+                <input type="radio" name="preference" value="6"> Студент<br>
+                <input type="radio" name="preference" value="7"> Ученик<br>
+                <input type="radio" name="preference" value="8"> Инвалид<br>
+            </div>
             <br>
             <div>
                 <input type="submit" value="Submit">
