--- a/web/secret.html
+++ b/web/secret.html
@@ -5,5 +5,7 @@
 </head>
 <body>
   <h1>ret</h1>
-  <a href="api/auth/logout">Logout</a>
+  <form action="api/auth/logout" method="POST">
+    <button type="submit" value="Logout">Logout</button>
+  </form>
 </body>
