Editing entities, registration started.

--- a/web/secret.html
+++ b/web/secret.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-  <title>sec</title>
+    <title>sec</title>
 </head>
 <body>
-  <h1>ret</h1>
-  <form action="api/auth/logout" method="POST">
-    <button type="submit" value="Logout">Logout</button>
-  </form>
+    <h1>Secret</h1>
+    <center>
+        <form action="api/auth/logout" method="POST">
+            <button type="submit" value="Logout">Logout</button>
+        </form>
+        <br>
+        <form action="api/converter" method="POST">
+            <div>
+                From:<br>
+                <input type="text" name="from">
+            </div>
+            <div>
+                To:<br>
+                <input type="text" name="to">
+            </div>
+            <div>
+                How much to gain:<br>
+                <input type="text" name="howMuchTo">
+            </div>
+            <button type="submit" value="Convert">Convert</button>
+        </form>
+    </center>
 </body>
