Route bean added + fixing other beans

--- a/web/index.html
+++ b/web/index.html
@@ -21,5 +21,7 @@
     </form>
     <br>
     <a href="register.html">Register</a>
+    <br>
+    <a href="secret.html">Secret</a>
   </center>
 </body>
