--- a/web/register.html
+++ b/web/register.html
@@ -66,6 +66,10 @@
                 <input type="submit" value="Submit">
             </div>
         </form>
+        <br>
+        <form action="api/auth/vkGetCode" method="POST">
+            <button type="submit" value="Login with VK">Login with VK</button>
+        </form>
     </center>
 </body>
 </html>
