--- a/web/secret.html
+++ b/web/secret.html
@@ -25,5 +25,18 @@
             </div>
             <button type="submit" value="Convert">Convert</button>
         </form>
+        <br>
+        <br>
+        <form action="api/route" method="GET">
+            <div>
+                Stoppage from:<br>
+                <input type="text" name="from">
+            </div>
+            <div>
+                Stoppage to:<br>
+                <input type="text" name="to">
+            </div>
+            <button type="submit" value="Take a ride!">Take a ride!</button>
+        </form>
     </center>
 </body>
