--- a/web/secret.html
+++ b/web/secret.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>sec</title>
 </head>
 <body>
@@ -10,7 +11,8 @@
             <button type="submit" value="Logout">Logout</button>
         </form>
         <br>
-        <form action="api/converter" method="POST">
+
+        <form action="api/limits/convert" method="POST">
             <div>
                 From:<br>
                 <input type="text" name="from">
@@ -25,5 +27,11 @@
             </div>
             <button type="submit" value="Convert">Convert</button>
         </form>
+
+        <a href="api/limits">ЧеКнИ сВоИ ЛиМиТы</a>
+        <br>
+        <br>
+        <br>
+        <a href="profile.html">А тут ЛК</a>
     </center>
 </body>
