React-native in here

--- a/web/coursework/public/index.html
+++ b/web/coursework/public/index.html
@@ -10,9 +10,11 @@
     />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React Stocks</title>
+    <title>Навигатор Будущего</title>
   </head>
   <body>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <div id="app"></div>
   </body>
 </html>
